testsuite/tests/backpack/should_fail/bkpfail06.stderr
[1 of 3] Processing p
  [1 of 2] Compiling H[sig]           ( p/H.hsig, nothing )
  [2 of 2] Compiling A                ( p/A.hs, nothing )
[2 of 3] Processing qimpl
  Instantiating qimpl
  [1 of 2] Compiling T                ( qimpl/T.hs, bkpfail06-out/qimpl/T.o )
  [2 of 2] Compiling H                ( qimpl/H.hs, bkpfail06-out/qimpl/H.o )
[3 of 3] Processing q
  Instantiating q
  [1 of 2] Including qimpl
  [2 of 2] Including p
    Instantiating p(qimpl:H)
    [1 of 2] Compiling H[sig]           ( p/H.hsig, bkpfail06-out/p/p-IueY0RdHDM2I4k0mLZuqM0/H.o )

bkpfail06.bkp:3:9: error:
    Type constructor ‘T’ has conflicting definitions in the module
    and its hsig file
    Main module: data T = T Bool
    Hsig file:  data T = T Int
    The constructors do not match: The types for ‘T’ differ
